[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"
[project]
name = "pyva-toolbox"
version = "1.3.0"
authors = [
  { name="Alexander Peiffer", email="author@alexanderpeiffer.de" },
]
description = "Python toolbox for vibroacoustic simulation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pint>=0.24.2",
    "numpy>=2.1.3",
    "matplotlib>=3.9.2",
    "scipy>=1.14.1",
    "pandas>=2.2.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/minipief/pyva"
"Bug Tracker" = "https://github.com/minipief/pyva/issues"