[build-system]
requires = ["hatchling >= 1.26","packaging>=24.2conda"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyva"]

[project]
name = "pyva-toolbox"
version = "1.3.1"
authors = [
  { name="Alexander Peiffer", email="author@alexanderpeiffer.de" },
]
description = "Python toolbox for vibroacoustic simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pint>=0.24.2",
    "numpy>=2.0.1",
    "matplotlib>=3.9.2",
    "scipy>=1.14.1",
    "pandas>=2.2.3"
]

license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/minipief/pyva"
"Bug Tracker" = "https://github.com/minipief/pyva/issues"
"Documentation" = "https://pyva.eu"
